<resources>
    <string name="app_name">LIC Pratidhi</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_new_home">NewHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="menu_home">Home</string>
    <string name="menu_premcalleadgen">Premium Calculator &amp; Lead gen</string>
    <string name="menu_cases_summary">Cases Summary</string>
    <string name="menu_admin_jobs">Admin Jobs</string>
    <string name="menu_enquiry">Enquiry</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_greetings">Greetings</string>
    <string name="menu_premium_calculator">Premium Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="guest">Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="premium_calculator">Premium Calculator</string>
    <string name="sum_assured">Sum Assured</string>
    <string name="policy_term">Policy Term</string>
    <string name="policy_paying_term">Policy Paying Term</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="ab_addb_rider">AB/ADDB Rider </string>
    <string name="police_personal">Police Personal</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="critical_sum_proposed">Critical Illnesss S.A :</string>
    <string name="term_rider_sum_proposed">Term Rider S.A :</string>
    <string name="third_gender">Third Gender</string>
    <string name="others">Others</string>
    <string name="OK">OK</string>
    <string name="premium_calculator_result">Premium Calculator Result</string>
    <string name="send_to">Plan sharing</string>
    <string name="input_years"> %1$s years</string>
    <string name="input_days"> %1$s Days</string>
    <string name="input_age_years">Age: %1$s years</string>
    <string name="input_rs_symbol">\u20B9 %1$s</string>
    <string name="label_share">Share</string>
    <string name="term_fix_input">%1$s years and %2$s years </string>
    <string name="term_variable_input">%1$s to %2$s years </string>
    <string name="label_cancel">Cancel</string>
    <string name="min_entryage_input">Minimum Entry Age for this plan is : %1$s years</string>
    <string name="max_entryage_input">Maximum Entry Age for this plan is : %1$s years</string>
    <string name="entryage_input"> Entry Age for this plan is from  : %1$s years to %2$s years </string>
    <string name="exitage_input">Exit Age for this plan is : %1$s years</string>
    <string name="critical_illness_rider">Critical Illness Rider</string>
    <string name="ab_addb_rider_sum_assured">AB/ADDB Rider S.A :</string>
    <string name="min_max_rs_symbol"> Min: %1$s  , Max: %2$s </string>
    <string name="send_feedback">Send Feedback</string>
    <string name="menu_feedback">Feedback</string>
    <string name="invalid_dob">Please enter the correct Date of Birth </string>
    <string name="getting_results">Getting results...</string>
    <string name="transition_name">transition name</string>
    <string name="err_value_in_range"> Rider value should be in range</string>
    <string name="err_sa_value_in_range"> Sum Assured value should be in range</string>
    <string name="err_rider_more_than_sa">Rider should not be more than Sum Assured</string>
    <string name="lorum_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra adipiscing at in tellus. Volutpat diam ut venenatis tellus. Sit amet purus gravida quis blandit turpis. Varius vel pharetra vel turpis nunc eget lorem dolor sed. Pulvinar mattis nunc sed blandit. Bibendum ut tristique et egestas quis ipsum. Facilisis leo vel fringilla est. Fringilla est ullamcorper eget nulla. Lacinia at quis risus sed vulputate. Felis eget nunc lobortis mattis aliquam.</string>
    <string name="name">Name</string>
    <string name="downloading">Downloading...</string>
    <string name="loading">Processing...</string>
    <string name="premium_payment_options">Premium Payment Options: </string>
    <string name="annuity_type">Annuity Type</string>
    <string name="plan_rebate">Plan Rebate</string>
    <string name="plan_eligibility">Eligibility</string>
    <string name="min_annuity">Minimum Annuity :</string>
    <string name="max_annuity">Maximum Annuity</string>
    <string name="purchase_price">Purchase Price :</string>
    <string name="dob_second_life">DOB Second Life</string>
    <string name="pension_mode">Pension Mode</string>
    <string name="annuity_options">Annuity Options</string>
    <string name="annuity_option">Annuity Option</string>
    <string name="annuity_mode">Annuity Mode</string>
    <string name="annuity_amount">Annuity Amount</string>
    <string name="age_first_life">Age First Life </string>
    <string name="age_second_life">Age Second Life </string>
    <string name="input_per_month">\u20B9 %1$s per month</string>
    <string name="input_per_quater">\u20B9 %1$s per quater</string>
    <string name="input_per_halfyearly">\u20B9 %1$s per half-yearly</string>
    <string name="input_per_annum">\u20B9 %1$s per annum </string>
    <string name="no_limits">No Limits</string>
    <string name="min_purchase_price">Min Purchase Price :</string>
    <string name="max_purchase_price">Maximum Purchase Price :</string>
    <string name="module_user">Module User</string>
    <string name="select_user_type">Select User Type</string>
    <string name="login">Login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="email">Email</string>
    <string name="userId">User Id</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="verify">Verify</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="passcode">Passcode</string>
    <string name="mobile_number_aadhaar">Mobile Number(Registered With Aadhaar)</string>
    <string name="offline_ekyc">Offline eKyc - Upload Zip File</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit">Submit</string>
    <string name="choose_file">Choose File</string>
    <string name="address_info">Address Information</string>
    <string name="basic_info">Basic Information</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="fathers_name">Fathers Name</string>
    <string name="mothers_name">Mothers Name</string>
    <string name="mobile_number">Mobile</string>
    <string name="residential_address">Residential Address</string>
    <string name="communication_address">Communication Address</string>
    <string name="address_line1">Address Line1</string>
    <string name="address_line2">Address Line2</string>
    <string name="address_line3">Address Line3</string>
    <string name="pincode">Pincode</string>
    <string name="corresposing_address_same_residential">Corresponding Address same as Residential Address</string>
    <string name="corresposing_bank_details_same">Whether NEFT Details same as NACH Details?</string>
    <string name="age_proof">Age Proof *</string>
    <string name="address_proof">Address Proof *</string>
    <string name="identification_proof">ID. Proof *</string>
    <string name="education_proof">Education Proof *</string>
    <string name="martial_status">Marital Status</string>
    <string name="spouse_name">Spouse\'s Name</string>
    <string name="birth_place">Birth Place*</string>
    <string name="pan_number">PAN Number</string>
    <string name="policy_info">Policy Information</string>
    <string name="occupation_info_label">Occupation Information</string>
    <string name="add_info_label">Additional Information</string>
    <string name="plan_number">Plan Number</string>
    <string name="term">Term</string>
    <string name="paying_term">Paying Term</string>
    <string name="dob">Date of Birth</string>
    <string name="dob_yyyy_mm_dd">Date of Birth* (yyyy-mm-dd)</string>
    <string name="dob_dd_mm_yyyy">Date of Birth* (dd-mm-yyyy)</string>
    <string name="age">Age</string>
    <string name="sum_proposed">Sum proposed</string>
    <string name="accident_benefit_options">Accident Benefits options</string>
    <string name="ab">AB</string>
    <string name="addb">ADDB</string>
    <string name="neither">Neither</string>
    <string name="amount_deposited">Amount Deposited</string>
    <string name="citizenship">Citizenship</string>
    <string name="residential_status">Residential Status</string>
    <string name="planName">Plan Name</string>
    <string name="address">Address</string>
    <string name="agency_details">Agency Details</string>
    <string name="agency_code">Agency Code</string>
    <string name="devp_code">DO Code</string>
    <string name="devp_clia_mentor_code">Dev Off/CLIA/Mentor Code</string>
    <string name="servicing_branch">Servicing Branch</string>
    <string name="proceed">Proceed</string>
    <string name="satellite_office_code">Satellite Office Code</string>
    <string name="continue_msg">Continue</string>
    <string name="msg_try_again">Seems the option is not working,Please try again later</string>
    <string name="occupation_details">Occupation Details</string>
    <string name="occupation_astrisk">Occupation *</string>
    <string name="nature_of_duty_astrisk">Nature of Duty *</string>
    <string name="objectives_of_ins">Objective of Insurance*</string>
    <string name="source_income_astrisk">Source of Income*</string>
    <string name="income_proof">Income Proof (Nature of Document)</string>
    <string name="annual_income_astrisk">Annual Income *</string>
    <string name="present_employer_name">Present Employer Name</string>
    <string name="length_of_service_completed">Years of Service Completed</string>
    <string name="additional_info">Additional Info</string>
    <string name="yearly_income">Proposer\'s yearly income</string>
    <string name="income_tax_assesses">Are you Income Tax Assessee?*</string>
    <string name="register_under_gst_act">Are you Registered under GST Act?*</string>
    <string name="question_related_occupation">Questions related to Occupations/Activities</string>
    <string name="political_exposed_question">b) Are you Politically Exposed Person (PEP) OR are you a family member or close relative of PEP ? * \n  (As per RBI guidelines PEPs are the individuals who are or have entrusted with prominent public    functions in a foreign country.)</string>
    <string name="give_details">If Yes, give details</string>
    <string name="details">Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="nop">NOP</string>
    <string name="fpi">FPI</string>
    <string name="active_agents">Active agents</string>
    <string name="total">Total</string>
    <string name="sorting">Sorting</string>
</resources>