<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin5">
    <TextView
        android:id="@+id/questionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/political_exposed_question"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5"
        android:orientation="horizontal">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/quesOptionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:thumb="@drawable/switch_custom_thumb"
            app:showText="true"
            app:track="@drawable/custom_track" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quesResponseTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_weight="1"
            android:hint="@string/give_details"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quesResponseET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxEms="15"
                android:maxLength="25"
                android:scrollIndicators="none"
                android:windowSoftInputMode="adjustResize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            app:backgroundTint="@color/orange"
            app:cornerRadius="@dimen/radius8"
            app:rippleColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginRight="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin10"
            android:visibility="gone"/>


    </TableRow>

</LinearLayout>

