<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ananda_bg"
    >

    <RelativeLayout
        style="@style/margin10LeftRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioGroup
            android:id="@+id/filterRadioRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/uptoDateMRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upto the Date" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/forDayMRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="For the day" />


        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/headerCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@color/white"
            android:clickable="true"
            android:layout_below="@+id/filterRadioRG"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp">

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sourceMTV"
                    style="@style/textListHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:padding="@dimen/padding5"
                    android:text="Source"

                    >

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nopMTV"
                    style="@style/textListHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center"
                    android:padding="@dimen/padding5"
                    android:text="@string/nop">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fpiMTV"
                    style="@style/textListHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:padding="@dimen/padding5"
                    android:text="@string/fpi">

                </com.google.android.material.textview.MaterialTextView>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/activeMTV"
                    style="@style/textListHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:padding="@dimen/padding5"
                    android:text="@string/active_agents">

                </com.google.android.material.textview.MaterialTextView>

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dataCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@color/white"
            android:layout_below="@+id/headerCV"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            android:visibility="gone">


        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@id/headerCV"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/totalMTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:gravity="center"
                android:padding="@dimen/padding5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:text="@string/total">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tNopMTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center"
                android:padding="@dimen/padding5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                >
            </com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tFpiMTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:gravity="center"
                android:padding="@dimen/padding5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                >
            </com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tActiveMTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:gravity="center"
                android:padding="@dimen/padding5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                >
            </com.google.android.material.textview.MaterialTextView>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/progress_bar_shim"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/layout_shimmer_line"
            android:layout_below="@id/headerCV"
           />
        <include
            android:id="@+id/progress_bar"
            layout="@layout/layout_invisible_progress_bar"
           />


        <ImageView
            android:id="@+id/noResultIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_no_result"
            android:visibility="gone" />


    </RelativeLayout>

</RelativeLayout>
